[tool.poetry]
name = "N-CONST"
version = "0.3.2"
description = "Parse and declare NANTEN2/NASCO specific constants/parameters."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/nanten2/N-CONST"
repository = "https://github.com/nanten2/N-CONST"

[tool.poetry.dependencies]
python = "^3.6"
astropy = "^4.1"
numpy = "^1.19"
dataclasses = { version = "^0.8", python = "~3.6" }
typing-extensions = { version = "^3.10.0", python = "<3.9" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b"
flake8 = "^3.8"
sphinx = "^3.3"
pydata-sphinx-theme = "^0.4"
m2r2 = "^0.2"
ipykernel = "^5.3"
jupyter = "^1.0"
jupyterlab = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
