[tool.poetry]
name = "N-CONST"
version = "1.0.4"
description = "Necst Constants and ObservatioN Specification Translator."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://nanten2.github.io/N-CONST"
repository = "https://github.com/nanten2/N-CONST"

[tool.poetry.dependencies]
python = "^3.6"
astropy = [
    { version = "^3.0", python = "<3.8" },
    { version = "^5.0.3", python = ">=3.8" }
]
numpy = "^1.19"
dataclasses = { version = "^0.8", python = "~3.6" }
typing-extensions = { version = ">=3.0, <5.0", python = "<3.9" }
tomlkit = "^0.10"

[tool.poetry.dev-dependencies]
black = "^20.6b"
flake8 = "^3.8"
ipykernel = "^5.3"
jupyter = "^1.0"
m2r2 = "^0.3"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7.2"
pytest = "^5.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

